--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.14.1",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "path-to-regexp": "^6.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
