--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@sendinblue/client": "^3.3.1",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "mongoose": "^8.14.1",
     "nodemailer": "^7.0.3",
+    "openai": "^6.9.1",
     "path-to-regexp": "^6.3.0"
   },
   "devDependencies": {
